refactor: fix code smells from sonarqube
Signed-off-by: RadovanTomik <radovan.tomasik@bbmri-eric.eu>